--- a/src/main/resources/ku/cs/headNoLogin.fxml
+++ b/src/main/resources/ku/cs/headNoLogin.fxml
@@ -9,14 +9,13 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="69.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox layoutX="84.0" layoutY="5.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fitHeight="73.0" fitWidth="93.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="68.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/logo.png" />
+                  <Image url="@image/javapai.png" />
                </image>
                <HBox.margin>
                   <Insets left="20.0" />
@@ -54,7 +53,7 @@
                   <Insets left="80.0" top="20.0" />
                </HBox.margin>
             </Label>
-            <ImageView fitHeight="37.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="37.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
                   <Insets left="80.0" top="20.0" />
                </HBox.margin>
