--- a/src/main/resources/ku/cs/home.fxml
+++ b/src/main/resources/ku/cs/home.fxml
@@ -1,168 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.HomeController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c9ad88" height="272.0" layoutX="9.0" layoutY="101.0" stroke="#c9ad88" strokeType="INSIDE" width="1007.0" />
-      <Button layoutX="531.0" layoutY="26.0" mnemonicParsing="false" onAction="#handleLinkToLoginButton" style="-fx-background-color: while; -fx-background-radius: 10;" text="Login" textFill="#bc986a">
-         <font>
-            <Font name="JasmineUPC" size="38.0" />
-         </font>
-      </Button>
-      <ImageView fitHeight="64.0" fitWidth="66.0" layoutX="17.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/logo.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="739.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/basket.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="676.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/heart.png" />
-         </image>
-      </ImageView>
-      <Button layoutX="281.0" layoutY="33.0" mnemonicParsing="false" onAction="#handleLinkToBestSellerButton" style="-fx-background-color: while;" text="ขายดี" textFill="#bc986a">
-         <font>
-            <Font name="JasmineUPC" size="30.0" />
-         </font>
-      </Button>
-      <Button layoutX="403.0" layoutY="33.0" mnemonicParsing="false" onAction="#handleLinkToRecommendButton" style="-fx-background-color: while;" text="แนะนำ" textFill="#bc986a">
-         <font>
-            <Font name="JasmineUPC" size="30.0" />
-         </font>
-      </Button>
-      <MenuButton accessibleRole="LIST_VIEW" layoutX="103.0" layoutY="37.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="134.0" style="-fx-background-color: #c9ad88;" text="ประเภท" textFill="WHITE">
-         <items>
-            <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" style="-fx-background-color: #bc986a; " text="หนังสือการ์ตูน" />
-            <MenuItem mnemonicParsing="false" onAction="#handleMagazineButton" text="นิตยสาร" />
-            <MenuItem mnemonicParsing="false" onAction="#handleAllTypeBookButton" text="ทั้งหมด" />
-         </items>
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </MenuButton>
-      <Label layoutX="395.0" layoutY="149.0" text="Promotion" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC Bold" size="70.0" />
-         </font>
-      </Label>
-      <Label layoutX="41.0" layoutY="401.0" text="หนังสือใหม่" textFill="RED">
-         <font>
-            <Font name="JasmineUPC" size="35.0" />
-         </font>
-      </Label>
-      <Label layoutX="173.0" layoutY="401.0" text="ซื้อได้ก่อนใครที่นี้!!">
-         <font>
-            <Font name="JasmineUPC" size="35.0" />
-         </font>
-      </Label>
-      <Line endX="-100.0" endY="23.0" layoutX="264.0" layoutY="400.0" startX="-100.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fffcf1" height="294.0" layoutX="30.0" layoutY="449.0" stroke="#fffcf1" strokeType="INSIDE" width="219.0" />
-      <Label fx:id="bookName" layoutX="42.0" layoutY="668.0" text="ชื่อหนังสือ">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="bookType" layoutX="150.0" layoutY="668.0" text="ประเภท">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="bookPrice" layoutX="44.0" layoutY="702.0" text="ราคา">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="bookShop" layoutX="148.0" layoutY="702.0" text="ชื่อร้านค้า">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c4c4c4" height="183.0" layoutX="39.0" layoutY="464.0" stroke="#c4c4c4" strokeType="INSIDE" width="200.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fffcf1" height="294.0" layoutX="282.0" layoutY="452.0" stroke="#fffcf1" strokeType="INSIDE" width="219.0" />
-      <Label fx:id="bookName1" layoutX="294.0" layoutY="668.0" text="ชื่อหนังสือ">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="bookType1" layoutX="402.0" layoutY="668.0" text="ประเภท">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="bookPrice1" layoutX="296.0" layoutY="702.0" text="ราคา">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="bookShop1" layoutX="400.0" layoutY="702.0" text="ชื่อร้านค้า">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c4c4c4" height="183.0" layoutX="291.0" layoutY="464.0" stroke="#c4c4c4" strokeType="INSIDE" width="200.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fffcf1" height="294.0" layoutX="528.0" layoutY="448.0" stroke="#fffcf1" strokeType="INSIDE" width="219.0" />
-      <Label fx:id="bookName2" layoutX="540.0" layoutY="668.0" text="ชื่อหนังสือ">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="bookType2" layoutX="648.0" layoutY="668.0" text="ประเภท">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="bookPrice2" layoutX="542.0" layoutY="702.0" text="ราคา">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="bookShop2" layoutX="646.0" layoutY="702.0" text="ชื่อร้านค้า">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c4c4c4" height="183.0" layoutX="537.0" layoutY="464.0" stroke="#c4c4c4" strokeType="INSIDE" width="200.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fffcf1" height="294.0" layoutX="776.0" layoutY="448.0" stroke="#fffcf1" strokeType="INSIDE" width="219.0" />
-      <Label fx:id="bookName3" layoutX="788.0" layoutY="668.0" text="ชื่อหนังสือ">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="bookType3" layoutX="890.0" layoutY="667.0" text="ประเภท">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="bookPrice3" layoutX="790.0" layoutY="702.0" text="ราคา">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="bookShop3" layoutX="888.0" layoutY="701.0" text="ชื่อร้านค้า">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c4c4c4" height="183.0" layoutX="785.0" layoutY="464.0" stroke="#c4c4c4" strokeType="INSIDE" width="200.0" />
-      <TextField layoutX="816.0" layoutY="27.0" prefHeight="54.0" prefWidth="192.0" promptText="ค้นหาหนังสือ" style="-fx-background-color: BC986A; -fx-background-radius: 10;">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </TextField>
+      <BorderPane layoutX="-1.0" layoutY="1.0" prefHeight="768.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <top>
+            <HBox prefHeight="69.0" prefWidth="1024.0" BorderPane.alignment="CENTER" />
+         </top>
+         <center>
+            <GridPane BorderPane.alignment="CENTER">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="323.06667175292966" minHeight="10.0" prefHeight="321.7333068847656" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="227.00003662109376" minHeight="10.0" prefHeight="47.066693115234386" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="333.66660156250003" minHeight="10.0" prefHeight="319.533349609375" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <ScrollBar prefHeight="0.0" prefWidth="1024.0">
+                           <HBox.margin>
+                              <Insets top="325.0" />
+                           </HBox.margin>
+                        </ScrollBar>
+                     </children>
+                  </HBox>
+                  <GridPane GridPane.rowIndex="2">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <HBox prefHeight="174.0" prefWidth="206.0" />
+                     </children>
+                  </GridPane>
+                  <Label prefHeight="22.0" prefWidth="201.0" text="          หนังสือใหม่" textAlignment="CENTER" textFill="RED" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="JasmineUPC" size="28.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets top="10.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label text="                          | ซื้อก่อนใครได้ที่นี้!" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="JasmineUPC" size="28.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets top="10.0" />
+                     </GridPane.margin>
+                  </Label>
+               </children>
+            </GridPane>
+         </center>
+      </BorderPane>
    </children>
 </AnchorPane>
