--- a/src/main/resources/ku/cs/applyToBeASeller.fxml
+++ b/src/main/resources/ku/cs/applyToBeASeller.fxml
@@ -1,124 +1,145 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.ApplyToBeASeller">
    <children>
-      <Circle fill="#c9ad88" layoutX="165.0" layoutY="242.0" radius="85.0" stroke="#c9ad88" strokeType="INSIDE" />
-      <Button layoutX="66.0" layoutY="393.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ข้อมูลส่วนตัว" textFill="WHITE">
+      <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <top>
+            <HBox prefHeight="69.0" prefWidth="1024.0" BorderPane.alignment="CENTER" />
+         </top>
+         <left>
+            <HBox prefHeight="694.0" prefWidth="326.0" style="-fx-background-color: #F5DEB3;" BorderPane.alignment="CENTER">
+               <children>
+                  <GridPane prefHeight="676.0" prefWidth="360.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints maxHeight="208.26669311523438" minHeight="10.0" prefHeight="208.26669311523438" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="132.9999755859375" minHeight="10.0" prefHeight="113.33330688476565" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image/Icon01.png" />
+                           </image>
+                           <GridPane.margin>
+                              <Insets left="90.0" top="40.0" />
+                           </GridPane.margin>
+                        </ImageView>
+                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="ข้อมูลส่วนตัว" textFill="WHITE" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="70.0" top="10.0" />
+                           </GridPane.margin>
+                           <font>
+                              <Font name="JasmineUPC" size="32.0" />
+                           </font>
+                        </Button>
+                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="สินค้าในตะกร้า" textFill="WHITE" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="JasmineUPC" size="32.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets left="70.0" top="10.0" />
+                           </GridPane.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="ข้อมูลการขาย" textFill="WHITE" GridPane.rowIndex="3">
+                           <GridPane.margin>
+                              <Insets left="70.0" top="10.0" />
+                           </GridPane.margin>
+                           <font>
+                              <Font name="JasmineUPC" size="32.0" />
+                           </font>
+                        </Button>
+                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="ประวัติการซื้อ" textFill="WHITE" GridPane.rowIndex="4">
+                           <font>
+                              <Font name="JasmineUPC" size="32.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets left="70.0" top="10.0" />
+                           </GridPane.margin>
+                        </Button>
+                     </children>
+                  </GridPane>
+               </children>
+            </HBox>
+         </left>
+      </BorderPane>
+      <Label layoutX="350.0" layoutY="120.0" text="สมัครเป็นผู้ขายสินค้า" textFill="#a05e07">
          <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <Button layoutX="65.99999999999997" layoutY="471.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="202.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="สินค้าในตะกร้า" textFill="WHITE">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <Line endX="-100.00003051757812" endY="479.0" layoutX="417.0" layoutY="247.0" startX="-100.00003051757812" startY="-120.46665954589844" />
-      <Button layoutX="66.79999999999998" layoutY="548.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ข้อมูลการขาย" textFill="WHITE">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <Button layoutX="67.4" layoutY="625.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ประวัติการซื้อ" textFill="WHITE">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <Label layoutX="340.0" layoutY="127.0" text="สมัครเป็นผู้ขายสินค้า" textFill="#a05e07">
-         <font>
-            <Font size="24.0" />
+            <Font name="JasmineUPC" size="40.0" />
          </font>
       </Label>
-      <Line endX="106.86669921875" endY="1.52587890625E-5" layoutX="431.0" layoutY="161.0" startX="-100.0" stroke="#969696" />
-      <Label layoutX="340.0" layoutY="197.0" text="ชื่อร้านค้า">
+      <Line endX="500.666748046875" endY="1.52587890625E-5" layoutX="450.0" layoutY="161.0" startX="-100.0" stroke="#7e4811" />
+      <Label layoutX="350.0" layoutY="197.0" text="ชื่อร้านค้า">
          <font>
-            <Font name="Arial Black" size="18.0" />
+            <Font name="JasmineUPC" size="32.0" />
          </font>
       </Label>
       <Label layoutX="681.0" layoutY="196.0" text="รายละเอียดเพิ่มเติม">
          <font>
-            <Font size="18.0" />
+            <Font name="JasmineUPC" size="30.0" />
          </font>
       </Label>
-      <Label layoutX="340.0" layoutY="286.0" text="ช่องทางการติดต่อ">
+      <Label layoutX="350.0" layoutY="310.0" text="ช่องทางการติดต่อ">
          <font>
-            <Font size="18.0" />
+            <Font name="JasmineUPC" size="30.0" />
          </font>
       </Label>
-      <TextField layoutX="341.0" layoutY="233.0" prefHeight="34.0" prefWidth="271.0" promptText="ชื่อร้านค้าของคุน" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;" />
-      <TextField layoutX="341.0" layoutY="324.0" prefHeight="34.0" prefWidth="513.0" promptText="ที่อยู่ที่สามารถติดต่อได้" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;" />
-      <TextField layoutX="679.0" layoutY="233.0" prefHeight="34.0" prefWidth="271.0" promptText="อธิบายรายละเอียดร้านพอสังเขป" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;" />
-      <TextField layoutX="341.0" layoutY="389.0" prefHeight="34.0" prefWidth="513.0" promptText="E-mail ของคุณ" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;" />
-      <TextField layoutX="340.0" layoutY="454.0" prefHeight="34.0" prefWidth="513.0" promptText="เบอร์โทรติดต่อของคุณ" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;" />
-      <TextField layoutX="341.0" layoutY="571.0" prefHeight="34.0" prefWidth="513.0" promptText="เลขบัญชีของคุณ" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;" />
-      <Label layoutX="340.0" layoutY="535.0" text="ช่องทางการโอนเงิน">
+      <TextField layoutX="350.0" layoutY="233.0" prefHeight="34.0" prefWidth="271.0" promptText="ชื่อร้านค้าของคุน" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
          <font>
-            <Font size="18.0" />
+            <Font name="JasmineUPC" size="18.0" />
+         </font></TextField>
+      <TextField layoutX="350.0" layoutY="356.0" prefHeight="34.0" prefWidth="521.0" promptText="ที่อยู่ที่สามารถติดต่อได้" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
+         <font>
+            <Font name="JasmineUPC" size="18.0" />
+         </font></TextField>
+      <TextField layoutX="679.0" layoutY="233.0" prefHeight="34.0" prefWidth="271.0" promptText="อธิบายรายละเอียดร้านพอสังเขป" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
+         <font>
+            <Font name="JasmineUPC" size="18.0" />
+         </font></TextField>
+      <TextField layoutX="350.0" layoutY="420.0" prefHeight="34.0" prefWidth="521.0" promptText="E-mail ของคุณ" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
+         <font>
+            <Font name="JasmineUPC" size="18.0" />
+         </font></TextField>
+      <TextField layoutX="350.0" layoutY="480.0" prefHeight="34.0" prefWidth="521.0" promptText="เบอร์โทรติดต่อของคุณ" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
+         <font>
+            <Font name="JasmineUPC" size="18.0" />
+         </font></TextField>
+      <TextField layoutX="350.0" layoutY="600.0" prefHeight="34.0" prefWidth="513.0" promptText="เลขบัญชีของคุณ" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
+         <font>
+            <Font name="JasmineUPC" size="18.0" />
+         </font></TextField>
+      <Label layoutX="350.0" layoutY="555.0" text="ช่องทางการโอนเงิน">
+         <font>
+            <Font name="JasmineUPC" size="30.0" />
          </font>
       </Label>
-      <Button layoutX="565.0" layoutY="658.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="194.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="สมัครเป็นผู้ขาย" textFill="WHITE">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Button layoutX="769.0" layoutY="329.0" mnemonicParsing="false" style="-fx-background-color: FFFCF1;" text="ใช้ที่อยู่เริ่มต้น" />
-      <ImageView fitHeight="64.0" fitWidth="66.0" layoutX="14.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/logo.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="749.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/basket.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="688.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/heart.png" />
-         </image>
-      </ImageView>
-      <Button layoutX="278.0" layoutY="27.0" mnemonicParsing="false" onAction="#handleLinkToBestSellerButton" style="-fx-background-color: while;" text="ขายดี" textFill="#bc986a">
+      <Button layoutX="530.0" layoutY="670.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="194.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="สมัครเป็นผู้ขาย" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="30.0" />
          </font>
       </Button>
-      <Button layoutX="400.0" layoutY="27.0" mnemonicParsing="false" onAction="#handleLinkToRecommendButton" style="-fx-background-color: while;" text="แนะนำ" textFill="#bc986a">
+      <Button layoutX="775.0" layoutY="356.0" mnemonicParsing="false" style="-fx-background-color: FFFCF1;" text="ใช้ที่อยู่เริ่มต้น" textFill="RED">
          <font>
-            <Font name="JasmineUPC" size="30.0" />
-         </font>
-      </Button>
-      <Button layoutX="528.0" layoutY="24.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="143.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" />
-      <MenuButton accessibleRole="LIST_VIEW" layoutX="100.0" layoutY="31.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="134.0" style="-fx-background-color: #c9ad88;" text="ประเภท" textFill="WHITE">
-         <items>
-            <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" style="-fx-background-color: #bc986a; " text="หนังสือการ์ตูน" />
-            <MenuItem mnemonicParsing="false" onAction="#handleMagazineButton" text="นิตยสาร" />
-            <MenuItem mnemonicParsing="false" onAction="#handleAllTypeBookButton" text="ทั้งหมด" />
-         </items>
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </MenuButton>
-      <Label fx:id="userName" layoutX="551.0" layoutY="32.0" text="username" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="38.0" />
-         </font>
-      </Label>
-      <TextField layoutX="818.0" layoutY="20.0" prefHeight="54.0" prefWidth="192.0" promptText="ค้นหาหนังสือ" style="-fx-background-color: BC986A; -fx-background-radius: 10;">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </TextField>
+            <Font name="JasmineUPC" size="18.0" />
+         </font></Button>
    </children>
 </AnchorPane>
