--- a/src/main/resources/ku/cs/basket.fxml
+++ b/src/main/resources/ku/cs/basket.fxml
@@ -1,190 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.BasketController">
    <children>
+      <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <top>
+            <HBox prefHeight="69.0" prefWidth="1024.0" style="-fx-background-color: #ffffff;" BorderPane.alignment="CENTER" />
+         </top>
+         <left>
+            <HBox prefHeight="694.0" prefWidth="326.0" style="-fx-background-color: #F5DEB3;" BorderPane.alignment="CENTER">
+               <children>
+                  <GridPane prefHeight="676.0" prefWidth="360.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints maxHeight="208.26669311523438" minHeight="10.0" prefHeight="208.26669311523438" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="132.9999755859375" minHeight="10.0" prefHeight="113.33330688476565" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image/Icon01.png" />
+                           </image>
+                           <GridPane.margin>
+                              <Insets left="90.0" top="40.0" />
+                           </GridPane.margin>
+                        </ImageView>
+                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="ข้อมูลส่วนตัว" textFill="WHITE" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="70.0" top="10.0" />
+                           </GridPane.margin>
+                           <font>
+                              <Font name="JasmineUPC" size="32.0" />
+                           </font>
+                        </Button>
+                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="สินค้าในตะกร้า" textFill="WHITE" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="JasmineUPC" size="32.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets left="70.0" top="10.0" />
+                           </GridPane.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="ข้อมูลการขาย" textFill="WHITE" GridPane.rowIndex="3">
+                           <GridPane.margin>
+                              <Insets left="70.0" top="10.0" />
+                           </GridPane.margin>
+                           <font>
+                              <Font name="JasmineUPC" size="32.0" />
+                           </font>
+                        </Button>
+                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="ประวัติการซื้อ" textFill="WHITE" GridPane.rowIndex="4">
+                           <font>
+                              <Font name="JasmineUPC" size="32.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets left="70.0" top="10.0" />
+                           </GridPane.margin>
+                        </Button>
+                     </children>
+                  </GridPane>
+               </children>
+            </HBox>
+         </left>
+         <center>
+            <ScrollPane prefHeight="500.0" prefWidth="698.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets bottom="100.0" top="95.0" />
+               </BorderPane.margin>
+               <content>
+                  <GridPane prefHeight="500.0" prefWidth="702.0" style="-fx-background-color: while;">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                  </GridPane>
+               </content>
+            </ScrollPane>
+         </center>
+      </BorderPane>
       <Button layoutX="837.0" layoutY="699.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="169.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="สั่งซื้อสินค้า" textAlignment="CENTER" textFill="#fffefe">
          <font>
             <Font name="JasmineUPC" size="33.0" />
          </font>
       </Button>
-      <ImageView fitHeight="64.0" fitWidth="66.0" layoutX="12.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/logo.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="133.0" layoutY="31.0" text="ประเภท" textFill="#bc986a">
+      <Label layoutX="350.0" layoutY="120.0" text="สินค้าในตะกร้า" textFill="#a05e07">
          <font>
-            <Font name="JasmineUPC" size="30.0" />
+            <Font name="JasmineUPC" size="40.0" />
          </font>
       </Label>
-      <Label layoutX="273.0" layoutY="31.0" text="ขายดี" textFill="#bc986a">
-         <font>
-            <Font name="JasmineUPC" size="30.0" />
-         </font>
-      </Label>
-      <Label layoutX="401.0" layoutY="31.0" text="แนะนำ" textFill="#bc986a">
-         <font>
-            <Font name="JasmineUPC" size="30.0" />
-         </font>
-      </Label>
-      <Circle fill="#c9ad88" layoutX="155.0" layoutY="232.0" radius="85.0" stroke="#c9ad88" strokeType="INSIDE" />
-      <Button layoutX="56.0" layoutY="383.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ข้อมูลส่วนตัว" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="28.0" />
-         </font>
-      </Button>
-      <Button layoutX="55.99999999999997" layoutY="461.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="202.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="สินค้าในตะกร้า" textFill="WHITE" AnchorPane.rightAnchor="765.6">
-         <font>
-            <Font name="JasmineUPC" size="28.0" />
-         </font>
-      </Button>
-      <Line endX="-100.00003051757812" endY="479.0" layoutX="407.0" layoutY="237.0" startX="-100.00003051757812" startY="-120.46665954589844" />
-      <Button layoutX="56.79999999999998" layoutY="538.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ข้อมูลการขาย" textFill="WHITE" AnchorPane.rightAnchor="765.6">
-         <font>
-            <Font name="JasmineUPC" size="28.0" />
-         </font>
-      </Button>
-      <Button layoutX="57.400000000000006" layoutY="615.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ประวัติการซื้อ" textFill="WHITE" AnchorPane.rightAnchor="765.0">
-         <font>
-            <Font name="JasmineUPC" size="28.0" />
-         </font>
-      </Button>
-      <Label layoutX="331.0" layoutY="117.0" text="สินค้าในตะกร้า" textFill="#a05e07">
-         <font>
-            <Font name="JasmineUPC" size="35.0" />
-         </font>
-      </Label>
-      <Line endX="69.39999389648438" layoutX="421.0" layoutY="148.0" startX="-100.0" stroke="#969696" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fffcf1" height="150.0" layoutX="330.0" layoutY="160.0" stroke="#fffcf1" strokeType="INSIDE" style="-fx-effect: shadow;" width="672.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fffcf1" height="150.0" layoutX="327.0" layoutY="333.0" stroke="#fffcf1" strokeType="INSIDE" style="-fx-effect: shadow;" width="672.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fffcf1" height="150.0" layoutX="327.0" layoutY="504.0" stroke="#fffcf1" strokeType="INSIDE" style="-fx-effect: shadow;" width="672.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c4c4c4" height="116.0" layoutX="342.0" layoutY="176.0" stroke="#c4c4c4" strokeType="INSIDE" width="127.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c4c4c4" height="116.0" layoutX="343.0" layoutY="522.0" stroke="#c4c4c4" strokeType="INSIDE" width="127.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c4c4c4" height="116.0" layoutX="342.0" layoutY="350.0" stroke="#c4c4c4" strokeType="INSIDE" width="127.0" />
-      <Label layoutX="485.0" layoutY="185.0" text="ชื่อร้าน">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="486.0" layoutY="361.0" text="ชื่อร้าน">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="486.0" layoutY="534.0" text="ชื่อร้าน">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="487.0" layoutY="601.0" text="รายการสินค้า">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="486.0" layoutY="424.0" text="รายการสินค้า">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="485.0" layoutY="247.0" text="รายการสินค้า">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <Button layoutX="927.0" layoutY="262.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="66.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ลบ" textFill="#fffefe">
-         <font>
-            <Font name="JasmineUPC" size="27.0" />
-         </font>
-      </Button>
-      <ImageView fitHeight="26.0" fitWidth="32.0" layoutX="964.0" layoutY="163.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/heart.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="26.0" fitWidth="32.0" layoutX="964.0" layoutY="336.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/heart.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="26.0" fitWidth="32.0" layoutX="964.0" layoutY="508.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/heart.png" />
-         </image>
-      </ImageView>
-      <TextField fx:id="editStockTextField" layoutX="772.0" layoutY="209.0" prefHeight="42.0" prefWidth="62.0" />
-      <Button layoutX="831.0" layoutY="209.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="45.0" style="-fx-background-radius: 5;" text="+">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <Button layoutX="731.0" layoutY="209.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="45.0" style="-fx-background-radius: 5;" text="-">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="745.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/basket.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="686.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/heart.png" />
-         </image>
-      </ImageView>
-      <Button layoutX="529.0" layoutY="19.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="143.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" />
-      <Label fx:id="userName" layoutX="552.0" layoutY="27.0" text="username" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="38.0" />
-         </font>
-      </Label>
-      <Button layoutX="927.0" layoutY="436.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="66.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ลบ" textFill="#fffefe">
-         <font>
-            <Font name="JasmineUPC" size="27.0" />
-         </font>
-      </Button>
-      <Button layoutX="926.0" layoutY="607.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="66.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ลบ" textFill="#fffefe">
-         <font>
-            <Font name="JasmineUPC" size="27.0" />
-         </font>
-      </Button>
-      <TextField fx:id="editStockTextField1" layoutX="772.0" layoutY="388.0" prefHeight="42.0" prefWidth="62.0" />
-      <Button layoutX="831.0" layoutY="387.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="45.0" style="-fx-background-radius: 5;" text="+">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <Button layoutX="731.0" layoutY="387.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="45.0" style="-fx-background-radius: 5;" text="-">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <TextField fx:id="editStockTextField2" layoutX="772.0" layoutY="557.0" prefHeight="42.0" prefWidth="62.0" />
-      <Button layoutX="831.0" layoutY="556.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="45.0" style="-fx-background-radius: 5;" text="+">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <Button layoutX="731.0" layoutY="556.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="45.0" style="-fx-background-radius: 5;" text="-">
-         <font>
-            <Font name="System Bold" size="20.0" />
-         </font>
-      </Button>
-      <TextField layoutX="817.0" layoutY="19.0" prefHeight="54.0" prefWidth="192.0" promptText="ค้นหาหนังสือ" style="-fx-background-color: BC986A; -fx-background-radius: 10;">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </TextField>
+      <Line endX="500.666748046875" endY="1.52587890625E-5" layoutX="450.0" layoutY="161.0" startX="-100.0" stroke="#7e4811" />
    </children>
 </AnchorPane>
